@@ -38,9 +38,9 @@ case $1 in
 		  (cd "$APP_DIR/src"; autoconf)
 		fi
 		rm -f "$APP_DIR/src/config.cache"
-		[ ! -d $HOME/build ] && mkdir $HOME/build
-		[ ! -d $HOME/build/"$PROG" ] && mkdir $HOME/build/"$PROG"
-		cd $HOME/build/"$PROG" && "$APP_DIR/src/configure" --enable-rox    \
+		[ ! -d "$HOME/build" ] && mkdir "$HOME/build"
+		[ ! -d "$HOME/build/$PROG" ] && mkdir "$HOME/build/$PROG"
+		cd "$HOME/build/$PROG" && "$APP_DIR/src/configure" --enable-rox    \
 					--with-platform="$PLATFORM" \
 					"$@" \
 			&& make clean && make && echo Done >&2 && exit 0
