@@ -8,6 +8,8 @@ Make ignoring executable files with known extensions the default setting
 (suggested by Daniel Poersch). Freedesktop.org is discussing a plan to mark
 individual MIME types as executable, which may be a better long-term
 solution.
+Option to prevent maximising windows from covering the panels (requested
+by Simon Templer and others).
 
 29-May-2004
 ~~~~~~~~~~~
